# mywork

./: .env.example  .gitignore  FOLLOWUP.md  README.md  config.yaml  pyproject.toml
openspec/changes/intelligent-doc-qa-agent/: design.md  proposal.md  tasks.md
scripts/: ingest.py  qa.py
src/: agent.py  config.py  knowledge_base.py  pdf_parser.py  rag.py  self_check.py
tests/: evaluate.py  test_cases.json  test_unit.py
