[project]
name = "intelligent-doc-qa-agent"
version = "0.1.0"
description = "Intelligent document Q&A agent for scanned PDFs"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.8.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
local-embed = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
